@@ -26,10 +26,13 @@ Version 2.10
   produce a new random choice each time the template is rendered. (`#478`_)
 - Add a ``unique`` filter. (`#469`_)
 - Add ``min`` and ``max`` filters. (`#475`_)
+- Add tests for all comparison operators: ``eq``, ``ne``, ``lt``, ``le``,
+  ``gt``, ``ge``. (`#665`_)
 
 .. _#469: https://github.com/pallets/jinja/pull/469
 .. _#475: https://github.com/pallets/jinja/pull/475
 .. _#478: https://github.com/pallets/jinja/pull/478
+.. _#665: https://github.com/pallets/jinja/pull/665
 
 Version 2.9.6
 -------------
